<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/solr"
    tools:context=".MainActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        >


        <ImageView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="70dp"
            android:alpha="10"

            android:src="@drawable/vishal1" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="532dp"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="28dp"
            android:layout_marginBottom="-20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="611dp"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="20dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/my_primary"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.9"
                    android:textStyle="bold"
                    android:textColor="@color/my_primary"
                    android:text="@string/please_login_with_your_information" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="20"
                    android:text="User Name"
                    android:textColor="@color/my_primary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="abc@gmail.com"
                    android:textStyle="bold"
                    android:textColor="@color/my_primary"
                    android:drawableEnd="@drawable/baseline_done_24"
                    android:inputType="textEmailAddress" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="20"
                    android:text="@string/password"
                    android:textColor="@color/my_primary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/my_primary"
                    android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                    android:inputType="textPassword" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:textStyle="bold"
                        android:textColor="@color/my_primary"
                        android:text="@string/i_forgot_my_password" />

                </RelativeLayout>



                <View
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/login"
                    android:textColor="#FAF6F6"
                    android:textSize="20sp"
                    app:backgroundTint="#F3262939"
                    app:cornerRadius="32dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnGoToRegister"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/GoToRegister"
                    android:textColor="#FAF6F6"
                    android:textSize="20sp"
                    app:backgroundTint="#F3262939"
                    app:cornerRadius="32dp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</RelativeLayout>